--- a/publiccode.yml
+++ b/publiccode.yml
@@ -3,58 +3,100 @@
 # More info at https://github.com/italia/publiccode.yml
 
 publiccodeYmlVersion: '0.2'
+name: UniConv
+releaseDate: '2019-04-15'
+url: 'https://github.com/uniurbit/UniConv'
+landingURL: 'https://github.com/uniurbit/UniConv'
+developmentStatus: stable
+softwareType: standalone/web
+roadmap: 'https://github.com/uniurbit/UniConv/issues'
+platforms:
+  - linux
+  - web
+usedBy:
+  - 'https://www.uniurb.it'
 categories:
-  - data-collection
-  - document-management
+  - employee-management
+dependsOn:
+  open:
+    - name: MariaDB
+    - name: php
+softwareVersion: '1.0'
+maintenance:
+  type: internal
+  contacts:
+    - name: Marco Cappellacci
+      email: marco.cappellacci@uniurb.it
+      affiliation: UniUrb
+    - name: Enrico Oliva
+      email: enrico.oliva@uniurb.it
+      affiliation: UniUrb
+legal:
+  license: AGPL-3.0-only
+  mainCopyrightOwner: Università degli Studi di Urbino Carlo Bo
+intendedAudience:
+  scope:
+    - employment
+localisation:
+  localisationReady: false
+  availableLanguages:
+    - it
+it:
+  countryExtensionVersion: '0.2'
+  conforme:
+    gdpr: true
+    misureMinimeSicurezza: true
+  riuso:
+    codiceIPA: usucb
 description:
   it:
     features:
-      - 'Gestione delle convenzioni: inserimento, modifica e validazione '
-      - Storico convenzioni
-      - 'Dashboard uffici '
-      - Generazione contratto
-      - 'Nofiche uffici e docenti '
-    genericName: UniConv è una applicazione web
-    longDescription: >
-      ## UNICONV
-
-
-     UniConv è un’applicazione sviluppata dall’Università degli Studi di Urbino per supportare la dematerializzazione e la
-     gestione dei contratti avente ad oggetto attività di ricerca, di consulenza e di servizio svolte dalle strutture didattiche,
-     di ricerca ed amministrative dell’Ateneo, anche per conto o nell’interesse prevalente di soggetti terzi pubblici e
-     privati. Le due principali tipologie contrattuali gestite in UniConv sono: in ambito istituzionale, le convenzioni per
-     contributo alla ricerca; in ambito commerciale, le convenzioni per attività in conto terzi.
-
+      - Protocollazione automatizzata
+      - SSO SAML2
+      - Integrazione con U-Gov
+      - Integrazione con Titulus
+    documentation: 'https://github.com/uniurbit/UniConv'
+    genericName: applicazione web
     shortDescription: >-
-      UniConv è una applicazione web per gestione dei flussi documentali e dematerializzazione dell'attività contrattuale attiva dell'ateneo. 
-      L'applicazione è basata su Web API e sviluppata sul framework Laravel per la parte backend, Angular per la parte frontend e Shibboleth come sistema di autenticazione.
-developmentStatus: beta
-it:
-  conforme:
-    gdpr: false
-    lineeGuidaDesign: true
-    misureMinimeSicurezza: true
-    modelloInteroperabilita: true
-  countryExtensionVersion: '0.2'
-  piattaforme:
-    anpr: false
-    cie: false
-    pagopa: false
-    spid: false
-legal:
-  license: MIT
-localisation:
-  availableLanguages:
-    - it
-  localisationReady: false
-maintenance:
-  contacts:
-    - email: enrico.oliva@uniurb.it
-      name: Enrico Oliva
-  type: internal
-name: UniConv
-platforms:
-  - web
-releaseDate: '2020-08-01'
-softwareType: standalone/web
-url: 'https://github.com/enricouniurb/UniConv'
+      Applicazione web per gestione dei flussi documentali e dematerializzazione
+      dell'attività contrattuale attiva.
+    longDescription: >
+      # **Funzionalità Applicative**
+
+
+      **Gestione delle convenzioni: inserimento e modifica informazione della
+      convenzione**
+
+
+      - Step di inserimento
+
+
+      **Gestione del flusso documentale**
+
+
+      - Fase di approvazione
+
+      - Fase di avvio sottoscrizione
+
+      - Fase di completamento sottoscrizione
+
+      - Fase di repertoriazione
+
+      - Fase di richiesta emissione
+
+      - Fase di incasso
+
+
+      **Storico convenzioni**
+
+
+      **Gestione del flusso documentale**
+
+
+      **Creazione delle attività utente associate alle fasi della convenzione**
+
+
+      **Dashboard operatore con stato attività**
+
+
+      **Dashboard convenzioni con stato convenzione e scadenze**
