--- a/uniconvclient/package.json
+++ b/uniconvclient/package.json
@@ -11,50 +11,51 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.6",
-    "@angular/common": "^7.2.6",
-    "@angular/compiler": "^7.2.6",
-    "@angular/core": "^7.2.6",
-    "@angular/forms": "^7.2.6",
-    "@angular/http": "^7.2.6",
-    "@angular/platform-browser": "^7.2.6",
-    "@angular/platform-browser-dynamic": "^7.2.6",
-    "@angular/router": "^7.2.6",
+    "@angular/animations": "^8.2.14",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
     "@auth0/angular-jwt": "^2.1.0",
-    "@ng-bootstrap/ng-bootstrap": "^4.0.3",
-    "@ng-select/ng-select": "^2.16.2",
-    "@ngx-formly/bootstrap": "^5.5.15",
-    "@ngx-formly/core": "^5.5.15",
+    "@ng-bootstrap/ng-bootstrap": "^5.3.1",
+    "@ng-select/ng-select": "^3.7.3",
+    "@ngx-formly/bootstrap": "^5.12.7",
+    "@ngx-formly/core": "^5.12.7",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "@swimlane/ngx-datatable": "^16.0.3",
     "ag-grid-angular": "^20.2.0",
     "ag-grid-community": "^20.2.0",
     "base64-arraybuffer": "^0.1.5",
-    "bootstrap-italia": "^0.9.6",
+    "bootstrap": "^4.6.0",
+    "browserslist": "^4.21.5",
     "core-js": "^2.6.5",
     "file-saver": "^2.0.0-rc.4",
-    "ng2-pdf-viewer": "^5.2.1",
+    "jquery": "^3.6.0",
+    "ng2-pdf-viewer": "^5.2.2",
     "ngx-cacheable": "^1.0.7",
     "ngx-currency": "^2.0.0",
     "ngx-loading": "^1.0.14",
     "ngx-perfect-scrollbar": "^7.2.0",
-    "ngx-permissions": "^5.0.0",
-    "ngx-toastr": "^9.1.1",
-    "popper.js": "^1.14.7",
-    "rxjs": "^6.4.0",
-    "zone.js": "^0.8.29"
+    "ngx-permissions": "^7.0.3",
+    "ngx-toastr": "^11.3.3",
+    "popper.js": "^1.16.1",
+    "rxjs": "^6.6.7",
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.2",
-    "@angular/cli": "~7.3.2",
-    "@angular/compiler-cli": "^7.2.6",
-    "@angular/language-service": "^7.2.6",
+    "@angular-devkit/build-angular": "~0.803.29",
+    "@angular/cli": "~8.3.29",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
     "@types/file-saver": "^1.3.1",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "^4.5.0",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
@@ -65,6 +66,6 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~3.2.4"
+    "typescript": "~3.5.3"
   }
 }
